--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,6 +9,7 @@
   padding: 0;
   box-sizing: border-box;
   transition: 0.3s linear;
+  scroll-behavior: smooth;
 }
 
 :root {
@@ -7157,11 +7158,24 @@ padding-left: 0%;
   height: 30px;
   border: 2px solid var(--main-color);
   border-radius: 50%;
-  left: 0;
-  top: 0;
   pointer-events: none;
   transform: translate(-50%, -50%);
-  transition: 0s ease-out;
-  z-index: 999 !important;
+  transition: transform 0.1s ease-out;
+  z-index: 10000 !important;
+}
+
+
+
+
+.reveal {
+  position: relative;
+  transform: translateX(-50px);
+  opacity: 0;
+  transition: all 0.5s linear;
+}
+
+.reveal.active {
+  transform: translateX(0px);
+  opacity: 1;
 }
 
