--- a/assets/css/price.css
+++ b/assets/css/price.css
@@ -1,118 +1,127 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
 
 :root {
- --main-color:#ff004f;
- --secondary-color:white;
- --grey-color:#303030;
+  --main-color: #ff004f;
+  --secondary-color: white;
+  --grey-color: #303030;
 }
 
 
-.banner-section{
-    width:100%;
-    height:100%;
+.banner-section {
+  width: 100%;
+  height: 100%;
 }
-.bannersection-container{
-    width:100%;
-    height:100%;
+
+.bannersection-container {
+  width: 100%;
+  height: 100%;
 }
-.banner-section-boxes{
-    width:100%;
-    height:100%;
+
+.banner-section-boxes {
+  width: 100%;
+  height: 100%;
 }
-.banner-section-images{
-    width:100%;
-    height:100%;
+
+.banner-section-images {
+  width: 100%;
+  height: 100%;
 }
-.banner-section-images img{
-    width:100% !important;
-    height:550px !important;
-    padding-top: 0 !important;
+
+.banner-section-images img {
+  width: 100% !important;
+  height: 550px !important;
+  padding-top: 0 !important;
 }
 
 
-.aboutus-images img{
-    width:100% !important;
-    height:100% !important;
+.aboutus-images img {
+  width: 100% !important;
+  height: 100% !important;
 }
 
 
 
 
 /* / Style inputs with type="text", select elements and textareas / */
-input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc; 
-    border-radius: 4px; 
-    box-sizing: border-box; 
-    margin-top: 6px; 
-    margin-bottom: 16px; 
-    resize: vertical ;
+input[type=text],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
-  
-  /* / Style the submit button with a specific background color etc / */
-  input[type=submit] {
-    /* background-color: var(--main-color);
+
+/* / Style the submit button with a specific background color etc / */
+input[type=submit] {
+  /* background-color: var(--main-color);
     color: white;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer; */
-    width:180px;
-  height:50px;
+  width: 180px;
+  height: 50px;
   background-color: var(--main-color);
   border: none;
   /* / border-radius: 5px; / */
-  font-family:"Montserrat", sans-serif; 
-  color:white;
+  font-family: "Montserrat", sans-serif;
+  color: white;
   font-size: 18px;
-  }
-  
-  /* / When moving the mouse over the submit button, add a darker green color / */
-  input[type=submit]:hover {
-    background-color: white;
-  color:var(--main-color);
-  border:2px solid var(--main-color);
-  }
-  
-  /* / Add a background color and some padding around the form / */
-  .form-pricing {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-  }
-  .we-need-section{
-     width:100%;
-     height:100%;
-     background-color: var(--main-color);
-     padding:3% 3% !important;
-  }
-  .we-need-section{
-    width:100%;
-     height:100%;
-  }
-  .we-need-para p{
-    width:100%;
-     height:100%;
-     color:white;
-     font-weight: 800;
-     text-align: center !important;
-     font-size:40px !important;
-     font-family:"Montserrat", sans-serif; 
-  }
+}
 
-  .form-pricing{
-    width:80% !important;
-    height:100% !important;
-    align-items: center !important;
-    margin-left:10% !important;
-    margin-bottom: 5% !important;
-  }
-  /* @media screen and (max-width:320px) {
+/* / When moving the mouse over the submit button, add a darker green color / */
+input[type=submit]:hover {
+  background-color: white;
+  color: var(--main-color);
+  border: 2px solid var(--main-color);
+}
+
+/* / Add a background color and some padding around the form / */
+.form-pricing {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.we-need-section {
+  width: 100%;
+  height: 100%;
+  background-color: var(--main-color);
+  padding: 3% 3% !important;
+}
+
+.we-need-section {
+  width: 100%;
+  height: 100%;
+}
+
+.we-need-para p {
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-weight: 800;
+  text-align: center !important;
+  font-size: 40px !important;
+  font-family: "Montserrat", sans-serif;
+}
+
+.form-pricing {
+  width: 80% !important;
+  height: 100% !important;
+  align-items: center !important;
+  margin-left: 10% !important;
+  margin-bottom: 5% !important;
+}
+
+/* @media screen and (max-width:320px) {
     .form-pricing{
         width:80% !important;
         height:100% !important;
@@ -123,71 +132,130 @@ input[type=text], select, textarea {
     
   } */
 
-  /* Responsive styles for smaller screens */
+/* Responsive styles for smaller screens */
 @media screen and (max-width: 768px) {
-    .form-pricing {
-      width: 90%;
-    }
+  .form-pricing {
+    width: 90%;
+  }
+
+  .we-need-para p {
+    font-size: 28px;
+  }
+
+  input[type=submit] {
+    width: 100%;
+    font-size: 16px;
+  }
+
+  .we-need-para p {
+    width: 100%;
+    height: 100%;
+    color: white;
+    font-weight: 800;
+    text-align: center !important;
+    font-size: 15px !important;
+    font-family: "Montserrat", sans-serif;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .we-need-para p {
+    font-size: 22px;
+  }
+
+  input[type=submit] {
+    font-size: 14px;
+  }
+
+  .we-need-para p {
+    width: 100%;
+    height: 100%;
+    color: white;
+    font-weight: 800;
+    text-align: center !important;
+    font-size: 15px !important;
+    font-family: "Montserrat", sans-serif;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .form-pricing {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .we-need-para p {
+    font-size: 18px;
+  }
+
+  input[type=submit] {
+    height: 40px;
+    font-size: 12px;
+  }
+
+  .we-need-para p {
+    width: 100%;
+    height: 100%;
+    color: white;
+    font-weight: 800;
+    text-align: center !important;
+    font-size: 15px !important;
+    font-family: "Montserrat", sans-serif;
+  }
+}
+
+.technologies-content ul {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 15px;
+  justify-content: center !important;
+
+}
+.video-frames {
+  gap: 40px;
+  filter: drop-shadow(0 0 10px var(--main-color));
+}
+
+.video-frames iframe{
+  width: 30%;
+  height: 600px;
+  margin-bottom: 40px;
+  border-radius: 25px;
+}
+
+.video-frames iframe:nth-child(1),
+.video-frames iframe:nth-child(2){
+  width: 100%;
+  height: 500px;
+}
+
+@media screen and (max-width:600px) {
   
-    .we-need-para p {
-      font-size: 28px;
-    }
+.video-frames iframe{
+  width: 100%;
+  height: 500px;
+  margin-bottom: 40px;
+}
+
+.video-frames iframe:nth-child(1),
+.video-frames iframe:nth-child(2){
+  width: 100%;
+  height: 300px;
+}
+}
+
+@media screen and (min-width:600px) and (max-width:992px) {
   
-    input[type=submit] {
-      width: 100%;
-      font-size: 16px;
-    }
-    .we-need-para p{
-        width:100%;
-         height:100%;
-         color:white;
-         font-weight: 800;
-         text-align: center !important;
-         font-size:15px !important;
-         font-family:"Montserrat", sans-serif; 
-      }
+  .video-frames iframe{
+    width: 47%;
+    height: 500px;
+    margin-bottom: 40px;
   }
   
-  @media screen and (max-width: 480px) {
-    .we-need-para p {
-      font-size: 22px;
-    }
-  
-    input[type=submit] {
-      font-size: 14px;
-    }
-    .we-need-para p{
-        width:100%;
-         height:100%;
-         color:white;
-         font-weight: 800;
-         text-align: center !important;
-         font-size:15px !important;
-         font-family:"Montserrat", sans-serif; 
-      }
+  .video-frames iframe:nth-child(1),
+  .video-frames iframe:nth-child(2){
+    width: 100%;
+    height: 300px;
   }
-  
-  @media screen and (max-width: 320px) {
-    .form-pricing {
-      width: 100%;
-      padding: 10px;
-    }
-  
-    .we-need-para p {
-      font-size: 18px;
-    }
-  
-    input[type=submit] {
-      height: 40px;
-      font-size: 12px;
-    }
-    .we-need-para p{
-        width:100%;
-         height:100%;
-         color:white;
-         font-weight: 800;
-         text-align: center !important;
-         font-size:15px !important;
-         font-family:"Montserrat", sans-serif; 
-      }
   }
