--- a/assets/css/price.css
+++ b/assets/css/price.css
@@ -212,50 +212,78 @@ input[type=submit]:hover {
   justify-content: center !important;
 
 }
+
 .video-frames {
   gap: 40px;
-  filter: drop-shadow(0 0 10px var(--main-color));
+  filter: drop-shadow(0 0 10px #000);
 }
 
-.video-frames iframe{
+.video-frames .iframe {
   width: 30%;
   height: 600px;
   margin-bottom: 40px;
   border-radius: 25px;
+  position: relative;
 }
 
-.video-frames iframe:nth-child(1),
-.video-frames iframe:nth-child(2){
+.video-frames .iframe iframe {
+  width: 100%;
+  height: 90%;
+}
+
+.video-frames .iframe:nth-child(1),
+.video-frames .iframe:nth-child(2) {
   width: 100%;
   height: 500px;
 }
 
 @media screen and (max-width:600px) {
-  
-.video-frames iframe{
-  width: 100%;
-  height: 500px;
-  margin-bottom: 40px;
-}
 
-.video-frames iframe:nth-child(1),
-.video-frames iframe:nth-child(2){
-  width: 100%;
-  height: 300px;
-}
+  .video-frames .iframe {
+    width: 100%;
+    height: 500px;
+    margin-bottom: 40px;
+  }
+
+  .video-frames .iframe:nth-child(1),
+  .video-frames .iframe:nth-child(2) {
+    width: 100%;
+    height: 300px;
+  }
 }
 
 @media screen and (min-width:600px) and (max-width:992px) {
-  
-  .video-frames iframe{
+
+  .video-frames .iframe {
     width: 47%;
     height: 500px;
     margin-bottom: 40px;
   }
-  
-  .video-frames iframe:nth-child(1),
-  .video-frames iframe:nth-child(2){
+
+  .video-frames .iframe:nth-child(1),
+  .video-frames .iframe:nth-child(2) {
     width: 100%;
     height: 300px;
   }
-  }
+}
+
+.frame-content {
+  width: 100%;
+  height: 10%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
+  z-index: 10;
+  color: white;
+}
+
+.frame-content .line{
+  width: 70px;
+  height: 2px;
+  border-radius: 50%;
+  background-color: var(--main-color);
+}
