--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -327,13 +327,13 @@ h6{
 /* hamburger  */
 
 .navbar .ham-1 {
-  padding: 2%;
+  padding: 1%;
   width: 50px;
   height: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   background-color: transparent;
   border: none;
   display: none;
@@ -378,8 +378,9 @@ h6{
 }
 
 .pro-active {
+
   left: 0% !important;
-  top: 60px !important;
+  top: 100px !important;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   z-index: 5;
 }
@@ -512,7 +513,7 @@ h6{
 @media screen and (min-width:500px) and (max-width:1024px) {
   .banner-section{
     width: 100% !important;
-    height: 40vh !important;
+    height: 30vh !important;
   }
   
 }
