--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -431,7 +431,7 @@ h6 {
 /* ..............video banner  page start.......... */
 .video-container {
   width: 100% !important;
-  height: 500px !important;
+  height: 80vh !important;
   position: relative;
   /* Set the height as desired */
 }
@@ -538,7 +538,6 @@ h6 {
 .aboutus-page {
   width: 100%;
   height: 100%;
-  margin-top: 5%;
   margin-bottom: 5%;
 }
 
@@ -7913,14 +7912,17 @@ footer .footer-communicate:nth-child(3) {
 
 .popup-form-container form input {
   margin-bottom: 3%;
-  border-radius: 25px;
+  border-radius: 0px;
   width: 100%;
-  padding: 1%;
+  padding: 1%;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  /* border: none; */
 }
 
 .popup-form-container form textarea {
   margin-bottom: 3%;
-  border-radius: 25px;
+  border-radius: 0px;
+  /* border: none; */
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   width: 100%;
   padding: 1%;
 }
