--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -311,7 +311,7 @@ h6 {
   color: var(--secondary-color);
   text-decoration: none;
   font-size: 13px;
-  /* font-weight: 700; */
+  font-weight: 400;
   display: flex;
   align-items: center;
   font-family: "Montserrat", sans-serif;
@@ -7839,7 +7839,7 @@ footer .footer-communicate:nth-child(3) {
 
 
 .popup-form {
-  width: 50%;
+  width: 38%;
   height: 600px;
   position: fixed;
   top: 10%;
@@ -7853,7 +7853,7 @@ footer .footer-communicate:nth-child(3) {
   scale: 0;
   transition: 1s;
   opacity: 0;
-  border-radius: 20px;
+  /* border-radius: 20px; */
 }
 
 
@@ -7907,6 +7907,7 @@ footer .footer-communicate:nth-child(3) {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-top: 5%;
 }
 
 
@@ -7914,17 +7915,17 @@ footer .footer-communicate:nth-child(3) {
   margin-bottom: 3%;
   border-radius: 0px;
   width: 100%;
-  padding: 1%;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  /* border: none; */
+  padding: 2% 2%;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border: none;
 }
 
 .popup-form-container form textarea {
   margin-bottom: 3%;
   border-radius: 0px;
-  /* border: none; */
+  border: none;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   width: 100%;
-  padding: 1%;
+  padding: 2% 2%;
 }
 
 .popup-form-container form button {
@@ -7970,7 +7971,7 @@ footer .footer-communicate:nth-child(3) {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     scale: 0;
     transition: 1s;
-    border-radius: 20px;
+    /* border-radius: 20px; */
   }
 
 }
