--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1239,7 +1239,7 @@ hr.tick {
 }
 
 .testimonialsection-review .container {
-  width: 80%;
+  width: 100%;
   height: 50% !important;
 }
 
@@ -7974,4 +7974,17 @@ footer .footer-communicate:nth-child(3) {
     /* border-radius: 20px; */
   }
 
+}
+
+
+.overlay-image{
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.hr{
+  margin: 0 !important;
 }
