--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -693,7 +693,11 @@ hr.ourservice-horizondalrole {
   position: absolute;
   white-space: nowrap;
   /* overflow: hidden; */
+  display: flex;
+  align-items: center;
+  width: 100%;
   height: 100%;
+  z-index: 999;
 }
 
 .marquee span {
@@ -704,18 +708,24 @@ hr.ourservice-horizondalrole {
   font-weight: 900;
   white-space: nowrap;
   line-height: 140px;
+  background-image: url(../images/png/befhue\ png-05.png);
+
+  background-size: contain;
   /* Match the container height */
+  width:100px !important  ;
+  height: 100px;
   font-size: 80px;
   animation: marquee 10s linear infinite;
 }
 
 .marquee2 span {
   animation-delay: 5s;
+  transform: translate(100%);
 }
 
 @keyframes marquee {
   0% {
-    transform: translate(0, 0);
+    transform: translate(100%, 0);
   }
 
   100% {
@@ -7981,7 +7991,7 @@ footer .footer-communicate:nth-child(3) {
   width: 100%;
   height: 100px;
   position: absolute;
-  top: 0;
+  top: -2px;
   left: 0;
 }
 
