--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -320,7 +320,7 @@ form .consultant-boxs .consultant-mini input:valid~label {
     top: 0 !important;
     left: 5%;
     border-radius: 2%;
-     background-color: whitesmoke;
+     background-color: white;
     font-size: 12px;
      color: var(--color); 
     /* color:black; */
@@ -413,7 +413,7 @@ form .consultant-min label {
 
 form .consultant-min input:focus~label {
     top: 0 !important;
-    background-color: whitesmoke;
+    background-color: white;
     font-size: 12px;
     left: 5%;
     color: var(--color);
@@ -446,7 +446,7 @@ form .consultant-min input:focus {
 form .consultant-min textarea {
     width: 100%;
     font-size: 15px;
-    color: var(--white);
+    /* color: var(--white); */
     padding: 20px 15px;
     background: transparent;
     border: 1.2px solid black;
@@ -465,7 +465,7 @@ form .consultant-min textarea:focus~label {
     left: 5%;
     background-color: white;
     font-size: 12px;
-    color: var(--color)
+    color: #000;
 }
 
 
@@ -496,7 +496,7 @@ form .btn:hover {
 }
 
 .contact-form-valid {
-    background-color: whitesmoke;
+    background-color: white;
 }
 @media screen and (max-width:320px) {
     /* contact info sec start */
