--- a/assets/css/price.css
+++ b/assets/css/price.css
@@ -229,10 +229,13 @@ input[type=submit]:hover {
 .video-frames .iframe iframe {
   width: 100%;
   height: 90%;
+  display: flex;
+  z-index: 0;
 }
 
 .video-frames .iframe:nth-child(1),
-.video-frames .iframe:nth-child(2) {
+.video-frames .iframe:nth-child(2),
+.video-frames .iframe:nth-child(3) {
   width: 100%;
   height: 500px;
 }
@@ -246,7 +249,8 @@ input[type=submit]:hover {
   }
 
   .video-frames .iframe:nth-child(1),
-  .video-frames .iframe:nth-child(2) {
+  .video-frames .iframe:nth-child(2),
+  .video-frames .iframe:nth-child(3) {
     width: 100%;
     height: 300px;
   }
@@ -261,7 +265,8 @@ input[type=submit]:hover {
   }
 
   .video-frames .iframe:nth-child(1),
-  .video-frames .iframe:nth-child(2) {
+  .video-frames .iframe:nth-child(2),
+  .video-frames .iframe:nth-child(3) {
     width: 100%;
     height: 300px;
   }
